--- a/Public/pricing.html
+++ b/Public/pricing.html
@@ -1316,7 +1316,7 @@
                                             <div class="et_pb_button_module_wrapper et_pb_text_align_center et_pb_button_10_wrapper et_pb_button_alignment_tablet_center et_pb_module ">
                                                 <a style="margin: 26px 13px 0px 13px;"
                                                    class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                   href="https://files.froghub.io/" target="_blank">{{$t('Get started')}}</a>
+                                                   href="https://dash.froghub.io/" target="_blank">{{$t('Get started')}}</a>
                                             </div>
                                         </div> <!-- .et_pb_column -->
                                     </div> <!-- .et_pb_row -->
@@ -1380,7 +1380,7 @@
                                                 <div class="et_pb_button_module_wrapper et_pb_text_align_center et_pb_button_10_wrapper et_pb_button_alignment_tablet_center et_pb_module " style="padding: 0; margin: 0;">
                                                     <a style="margin: 26px 13px 0px 13px; white-space: nowrap"
                                                        class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                       href="https://files.froghub.io/" target="_blank">{{$t('Select Free')}}</a>
+                                                       href="https://dash.froghub.io/" target="_blank">{{$t('Select Free')}}</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -1429,7 +1429,7 @@
                                                 <div class="et_pb_button_module_wrapper et_pb_text_align_center et_pb_button_10_wrapper et_pb_button_alignment_tablet_center et_pb_module " style="padding: 0; margin: 0;">
                                                     <a style="margin: 26px 13px 0px 13px; white-space: nowrap"
                                                        class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                       href="https://files.froghub.io/" target="_blank">{{$t('Select Pro')}}</a>
+                                                       href="https://dash.froghub.io/" target="_blank">{{$t('Select Pro')}}</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -1478,7 +1478,7 @@
                                                 <div class="et_pb_button_module_wrapper et_pb_text_align_center et_pb_button_10_wrapper et_pb_button_alignment_tablet_center et_pb_module " style="padding: 0; margin: 0;">
                                                     <a style="margin: 26px 13px 0px 13px; white-space: nowrap"
                                                        class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                       href="https://files.froghub.io/" target="_blank">{{$t('Select Business')}}</a>
+                                                       href="https://dash.froghub.io/" target="_blank">{{$t('Select Business')}}</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -1499,7 +1499,7 @@
                                                 <div class="et_pb_button_module_wrapper et_pb_text_align_center et_pb_button_10_wrapper et_pb_button_alignment_tablet_center et_pb_module " style="padding: 0; margin: 0;">
                                                     <a style="margin: 26px 13px 0px 13px; white-space: nowrap"
                                                        class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                       href="https://files.froghub.io/" target="_blank">{{$t('Select Enterprise')}}</a>
+                                                       href="https://dash.froghub.io/" target="_blank">{{$t('Select Enterprise')}}</a>
                                                 </div>
                                             </div>
                                         </div>
